--- a/style.css
+++ b/style.css
@@ -14,14 +14,19 @@
      }
      
      img {
-       width: 300px;
-       height: 20%;
+       width: 220px;
+       height: 220px;
+       border-radius: 50%;
+       object-fit: cover;
+       border: 4px solid #2c2c2c;
+            /* margin-bottom: 20px; */
      }
 
      h1,h2,h3,h4,h5,h6{
        color:  #66BFBE;
      }
   
+
 
 
 
